# zcashblockdecryption

./: .gitignore  Dockerfile  FALLBACK_ENDPOINTS.md  FIXES_APPLIED.md  RAILWAY_DEPLOYMENT.md  README.md  SECURITY.md  endtoend.md
block_scanner_api/: .env.example  .gitignore  FALLBACK_SETUP.md  README.md  package-lock.json  package.json  postman_collection.json  test_scan.sh
block_scanner_api/src/: index.ts
block_scanner_api/src/routes/: scan.ts
block_scanner_api/src/services/: cache.ts  decryptor.ts  getblock-client.ts  multi-provider-client.ts  rate-limiter.ts
block_scanner_api/src/types/: index.ts
block_scanner_api/src/utils/: logger.ts
zcash_tx_decryptor/: Cargo.toml  README.md
zcash_tx_decryptor/src/: models.rs  simple_main.rs
